--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "delivery-driver-locator",
+	"author": "danmanu44",
+	 
 	
-	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -12,6 +13,5 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	},
-	"author": "danmanu44"
+	}
 }
