changing the name and author

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "delivery-driver-locator",
-	"author": "danmanu44",
+	"name": "fcc-learn-npm-package-json",
+  "author": "danmanu",
 	 
 	
 	"dependencies": {
